--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,13 @@
-body{
-color: white;
-background:black;
+body {
+    color: pink;
+    background: whitesmoke;
+    margin: 0px;
 }
+
+header {
+    border-bottom: solid 2px rgb(42, 122, 228);
+    padding: 20px;
+    font-size: 32px;
+    color: rgb(42, 122, 228);
+}
+
