--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,19 @@ header {
     color: rgb(42, 122, 228);
 }
 
+
+
+
+/* código omitido */
+
+section {
+    background: rgb(184,156,213);
+    padding-bottom: 80px;
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
+}
+
+.chamada-texto {
+    margin-right: 5%;
+}
