--- a/styles.css
+++ b/styles.css
@@ -2,23 +2,32 @@ body {
     color: pink;
     background: whitesmoke;
     margin: 0px;
-}
-
-header {
+    font-family: "Chakra Petch", sans-serif;
+  }
+  
+  header {
     border-bottom: solid 2px rgb(42, 122, 228);
     padding: 20px;
     font-size: 32px;
     color: rgb(42, 122, 228);
-}
-
-section {
-    background:whitesmoke;
+  }
+  
+  section {
+    background: whitesmoke
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
     justify-content: center;
-}
-
-.chamada-texto {
+  }
+  
+  .chamada-texto {
     margin-right: 5%;
-}
+  }
+  
+  h1 {
+    font-size: 40px;
+  }
+  
+  p {
+    font-size: 20px;
+  }
